volumes/conv-app/05-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: conv-app
spec:
  replicas: 1
  selector:
    matchLabels:
      components: api
  template:
    metadata:
      name: api
      labels:
        components: api
    spec:
      containers:
        - name: api
          image: mirror.gcr.io/antonlarichev/conv-api:1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
          volumeMounts:
            - mountPath: /opt/app/uploads
              name: api-data
      volumes:
        - name: api-data
          persistentVolumeClaim:
            claimName: api-pvc
