volumes/conv-app/05-converter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-deployment
  namespace: conv-app
spec:
  replicas: 1
  selector:
    matchLabels:
      components: converter
  template:
    metadata:
      name: converter
      labels:
        components: converter
    spec:
      containers:
        - name: converter
          image: mirror.gcr.io/antonlarichev/conv-service:1.0
          resources:
            limits:
              cpu: "200m"
              memory: "500Mi"
