volumes/conv-app/06-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: conv-app
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
  selector:
    components: api
