volumes/conv-app/06-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: conv-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    components: frontend
