volumes/conv-app/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: conv-app
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: frontend.conv-app.party-e.ru
      http:
        paths:
          - backend:
              service:
                name: api-service
                port:
                  number: 3000
            pathType: Prefix
            path: /api
          - backend:
              service:
                name: app-service
                port:
                  number: 80
            pathType: Prefix
            path: /
